# anime-avatar-generator

./: .gitignore  config.json  main.py  pyproject.toml  requirements.txt
anime_avatar_generator/: train.py
anime_avatar_generator/models/: dcgan.py
boot/: argparse.py  boot.py
config_parser/: parser.py
data_loader/: cache_loader.py  image_handler.py
data_processor/: data_loader.py
docs/: README.md  __init__.py  __main__.py  _sidebar.md  exploration.md  index.html
experiment/: dcgan.ipynb  test.ipynb
image_crawler/: crawler.py
utils/: process.py
